working chatrooms with reset